test/Fail/InvalidNamePartLambda.agda
test = forall _λ_ → Set
