test/Fail/InvalidNamePartLambda.err
InvalidNamePartLambda.agda:1.19: error: [ParseError]
in the name _λ_, the part λ is not valid because it is used for lambda-abstraction
